# entrezpy-fork

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  README.rst  entrezpy.dox  setup.cfg
doc/manuscript/: references.bib
doc/manuscript/lsts/: entrezpy-examples.tex
docs/entrezpy-doc/: Makefile
docs/entrezpy-doc/source/: conf.py  index.md  index.rst  setup.rst
docs/manuscript/: entrezpy.ms.jpb.tex  jpb.lst.sty  tpj.bst
docs/manuscript/figs/: entrezpy.fig.tex  entrezpy.panels.fig.tex  (+2 more)
docs/poster-abacbs2019/: abacbs2019.jpb.tex
examples/: entrezpy-example.conduit.fetch-genome.py  entrezpy-example.conduit.fetch-summaries.py  entrezpy-example.efetch.py  entrezpy-example.elink.py  entrezpy-example.epost.py  entrezpy-example.esearch.py  entrezpy-example.esummary.py  entrezpy-example.wally.fetch-genome.py  entrezpy-example.wally.fetch-summaries.py  entrezpy-examples.wally-0.py  entrezpy.efetch-examples.py  entrezpy.elink-examples.py  entrezpy.epost-examples.py  entrezpy.esearch-examples.py  entrezpy.esummary-examples.py  entrezpy.wally-example-0.py  entrezpy.wally-example-1.py
src/efetch/: efetch_analyzer.py  efetch_parameter.py  efetch_request.py  efetcher.py
src/elink/: elink_analyzer.py  elink_parameter.py
src/entrezpy/: conduit.py  logger.py  wally.py
src/entrezpy_base/: analyzer.py  monitor.py  query.py  request.py  result.py
src/epost/: epost_analyzer.py  epost_request.py  eposter.py
src/esummary/: esummary_parameter.py  esummary_request.py  esummary_result.py
src/wally/: wally.py  wally_query.py
test/: Dockerfile  entrezpy-test.esearch.py
(+114 files in other folders)
