[metadata]
name = entrezpy
author = Jan P Buchmann
author_email = jpb@members.fsf.org
version = 2.1.3edit
description = Dedicated library to query and retrieve data from Entrez databases at NCBI
long_description = file: README.rst
keywords = bioinformatics NCBI Entrez
url = https://gitlab.com/ncbipy/entrezpy.git
license = LGPL
classifiers =
    Programming Language :: Python :: 3.6
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Production/Stable

[options]
zip_safe = False
package_dir=
  =src
packages = find:

[options.packages.find]
where = src
